<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/name"
            android:inputType="textPersonName"/>

        <TextView
            android:text="@string/toppings"
            style="@style/HeaderTextStyle"/>

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:paddingLeft="24dp"
            android:paddingStart="24dp"
            android:paddingRight="24dp"
            android:paddingEnd="24dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />
        <!--android:onClick="changeTopping"-->

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:paddingLeft="24dp"
            android:paddingStart="24dp"
            android:paddingRight="24dp"
            android:paddingEnd="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            android:text="@string/quantity"
            style="@style/HeaderTextStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus_button"
                style="@style/ButtonSquareStyle"
                android:layout_margin="16dp"
                android:onClick="decrement"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/zero"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/plus_button"
                style="@style/ButtonSquareStyle"
                android:layout_margin="16dp"
                android:onClick="increment"
                android:text="@string/plus" />

        </LinearLayout>

        <TextView
            android:text="@string/total_price"
            style="@style/HeaderTextStyle" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/empty_price"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/order_button"
            style="@style/ButtonStyle"
            android:layout_margin="16dp"
            android:onClick="sendOrder"
            android:text="@string/order" />

    </LinearLayout>

</ScrollView>

